# ecommerce_project

./: .coveragerc  CONTRIBUTORS.md  Pipfile  README.md  logging.toml  pyproject.toml  requirements.txt  settings.prod.ini  setup.cfg
account/: apps.py  signals.py
account/admin/: user.py
account/api/: urls.py
account/api/serializers/: user.py
account/api/views/: user.py
account/forms/: __init__.py  auth.py  fields.py  user.py
account/helper/: enums.py
account/management/commands/: account_data_generator.py  demo_user_generator.py
account/models/: profile.py  user.py
account/repository/business_layer/manager/: account.py
account/repository/generator_layer/: __init__.py  account_data_generator.py  demo_user_generator.py
account/repository/manager/: profile.py
account/repository/queryset/: __init__.py  user.py
account/tests/models/: test_profile.py  test_user.py
account/tests/querysets/: test_user.py
ecommerce_project/: settings.py
kernel/: asgi.py  settings.py  wsgi.py
kernel/settings/: base.py  development.py  packages.py  secure.py
painless/api/: exceptions.py  renderers.py
painless/helper/: enums.py  typing.py
painless/middlewares/: __init__.py  ip_address.py
painless/models/: __init__.py  fields.py  mixins.py
painless/models/validators/: __init__.py  picture.py
painless/repository/: base.py
repository/business_layer/manager/: __init__.py
repository/manager/: __init__.py  base_manager.py
repository/queryset/: profile.py
