[metadata]
name = Django E-Commerce Mapsa Bootcamp
version = 0.0.0
url = https://example.com
author = SAGE Team
author_email = dev@sageteam.org
description = A high-level E-commerce that encourages rapid development and clean, pragmatic design.
long_description = README.md
license = private
classifiers =
    Environment :: Web
    Framework :: Django
    OperatingSystem :: OS Independent
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Product Studio
project_urls =
    Framework Documentation = https://docs.djangoproject.com/
    Project Documentation = https://doc.example.com/en/stable/releases/
    Source = https://git.example.com/e-commerce/v1/

[flake8]
max-line-length = 82
exclude =
    .git
    .gitignore
    .vscode
    .idea
    .env
    .venv
    env
    venv
    kernel/settings/*
    **/migrations/*
per-file-ignores =
    */__init__.py: F401
    tests/*: TAE001

[mypy]
plugins = mypy_django_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = "kernel.settings.development"
